<resources>
    <string name="app_name">Outdoor Odyssey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="icon">Simple ODO logo icon</string>
    <string name="manual">Mentor Manual</string>
    <string name="mepsInstructions">Enter a number for each section of the MEPS triangle below to manually add a MEPS run. An average of all meps runs will be kept at the bottom of the screen. Don\'t forget the man in the glass!</string>
    <string name="mepsM">M:</string>
    <string name="mepsE">E:</string>
    <string name="mepsP">P:</string>
    <string name="mepsS">S:</string>
    <string name="averageDescription">Average Meps Run Score:</string>
    <string name="mepsButton">Log MEPS Run</string>
    <string name="triangleDescription">MEPS triangle image</string>
    <string name="action_settings">Settings</string>
    <string-array name="philosophyList">

        <item>31 Flavors</item>
        <item>5,4,3,2,1</item>
        <item>Chief Bedohave</item>
        <item>D + A = R</item>
        <item>Emotional Bank Account</item>
        <item>Eyeball Level Leadership</item>
        <item>Iceberg Theory</item>
        <item>Leadership Principles</item>
        <item>Leadership Traits</item>
        <item>MEPS</item>
        <item>Microwave Mentality</item>
        <item>Mr. Potato Head</item>
        <item>SMEAC</item>
        <item>Teach,Learn,Smile</item>
        <item>The Wizard</item>

    </string-array>
    <string name="flavors31">

        The “31 Flavors” rank as far more than a marketing tool; they represent the reality that people simple see things differently and make decisions based on their own perspectives. This is NOT a trite phrase or gimmick; young, aspiring leaders must be inspired to accept anyone of a different flavor; repeatedly surrounding themselves with like-minded individuals who do nothing more than reinforce their own views, regardless of how limited or jaded they might be. The more diverse the team represented by a variety of “flavors”, the stronger the team. We must aggressively work to build teams with variety, accepting others from different backgrounds and capitalizing on their strengths.

    </string>
    <string name="most54321">

        "5, 4, 3, 2, 1 most important words in the English language.\n\n5. All men are created equal… unfortunately not all men are treated equal. It is up to you as a mentor and a leader to level the playing field.\n\n4. In the beginning, god… a spiritual base is necessary when tough decisions are needed and serves as a moral compass when you make decisions and engage others.\n\n3. I love you… Agape love serves as the most powerful fuel to inspire others to follow you.\n\n2. Genuine Concern… A must if you expect to inspire others to follow you.\n\n1. Humility… Being able to hold yourself accountable is a prerequisite for leadership."\n\n

    </string>
    <string name="bedohave">

        Developing a personal mission statement likely appears quite onerous at first; however it is really NOT at all difficult. In order to live principle-centered lives, and contribute to society and others, the exercise ranks as one of the most critical things you will ever undertake. While your focus may change many times in the next few years relative to life goals, it is very important to thing of the “Chief”, using him to assist and guide your efforts. Remembering Chief BeDOHave’s name will enable you to craft your personal mission statement.\n\nWho do you want to BE?\nWhat sort of impact do you want to make on others. This will assist you in keeping others before self; especially critical in demonstrating \‘genuine concern\’ to those you will lead.\n\nWhat do you want to DO?\nIt is also key to examine your motives for what you DO in life. Do you want to make a difference and assist others, or is your selection tied more closely with recognition and/or personal advancement?\n\nWhat do you want to HAVE?\nUnfortunately, our society perpetuates the aspect of acquiring more material possessions. Sad as it seems, a large percentage of Americans follow a mission statement aligned solely with HAVE.\n\nThe CHIEF will remind you of your priorities - very critical to the young, aspiring leader. Self-examination ranks as one of the most essential exercises in leadership development. If you can’t be honest with yourself, you will never be able to be honest with others!\n\n

    </string>
    <string name="DAR">

        DREAMS + ACTION = REALITY\n\nD+A=R is a plan for achieving your dreams. Any dream imaginable will gave an appropriate action plan to make that dream a reality. Young kids can see at an early age what work is necessary to brome a polo or a veterinarian. With a solid action plan that involves education, anything can be achieved. Fully embrace your DREAM. Fully develop your ACTION plan. Fully achieve the REALITY.\n\nRemember, GOING THE EXTRA MILE MAY BE A LONELY TRIP\n\n

    </string>
    <string name="EBA">

        In every relationship you either give or take; you cannot do both and certainly cannot give what you do not have. Consider for a second those you know who constantly live self-indulged, me-first lives. How would you rank the status of their personal account with others? BANKRUPT or course! Once again, the two most important works come to mind: GENUINE CONCERN. If you hope to lead and inspire others to follow you, your emotional bank account with them must be filled with “deposits”. Keep another acronym in mind as a tool to keep your “account” with others in order: TLS. TLS stands for Teach those you lead something everyday; Learn something from those you lead everyday and Smile always. Regardless of how tough a situation might be, people gravitate to leaders who project a positive demeanor. You will inspire others and generate healthy relationships, as your positive attitude will help establish an environment for success.\n\n

    </string>
    <string name="eyeballLevel">

        EYEBALL LEVEL; ONE ON ONE; DIRECT\n\nLeading by example is the only option to choose is you want to become an effective leader. Inspiring others by showing them the way. A leader should be above no task they expect done.\n\n

    </string>
    <string name="iceberg">

        The Iceberg Theory is a great way to see D+A=R. A mammoth iceberg only shows a small percentage of itself above water. This exposed portion is much like an achieved dream. The action plan is the part of the iceberg that most of us never see. Your hard work toward achieving your dreams might go unnoticed to many, but the results will be yours from which to benefit.\n\n

    </string>
    <string name="leadershipPrinciples">

        Principles, Different from traits, rate special attention and consideration as they rank as immutable and unchanging. They DO NOT apply to certain situations or specific individuals; they remain constant and apply to everything we do as leaders. These principles, not unique to Outdoor Odyssey, should guide your life regardless of future undertaking. We will embrace these principles thoroughly during the Leadership Academy, and they will set the stage for your success as a mentor and a leader in ALL future endeavors.\n\nThe Outdoor Odyssey Leadership Principles are as follows:\n\n1. Focus on the mission always - SMEAC!!!!\n\n2. Seek responsibility and take responsibility for your actions and the performance/conduct of your team and peers.\n\n3. Know yourself and seek self-improvement (most important word is humility).\n\n4. Be technically and operationally proficient\n\n5. Keep people informed\n\n6. Set the example, live MEPS!\n\n7. Ensure the task is understood, supervised, and completed (Accountability)\n\n8. Make sound and timely decisions.\n\n9. Develop a sense of responsibility among your teammates (Accountability)\n\n10. Employ any team in accordance with its capabilities; SAFETY ALWAYS!\n\n11. Your word is your BOND, never sacrifice INTEGRITY!\n\n12. Two most important words are GENUINE CONCERN; without these, your actions and words will be empty.\n\n13. Fight hard to keep these principles as YOUR LIFE’s CENTER!\n\n14. It’s all about energy; energy is contagious. Make sure yours is worth catching.\n\n

    </string>
    <string name="leadershipTraits">

        We encourage you to consider the fourteen leadership traits as you work to build your personal leadership style. A number of these traits will come to you naturally; some, in face, you have likely already developed. Certain traits, however, will be developed only as a result of detailed work on your part. Consider “31 Flavors” and Mr/ Mrs. Potatohead; everyone is different, displaying unique abilities relative to the application of traits. Study those you encounter, especially the counselors and fellow mentors, observing how others effectively employ certain traits as they influence and inspire others. One of the most compelling aspects of becoming a mentor is that the experience allows you personal interaction with others, the ONLY, way one can ever expect to refine leadership traits and develop leadership skills. The leadership traits are as follows:\n\nJudgement\nJustice\nDependability\nInitiative\nDecisiveness\nTact\nINTEGRITY\nEnthusiasm\nBearing\nUnselfishness\nCourage\nKnowledge\nLoyalty\nEndurance\n\nYou see that the trait INTEGRITY has been capitalized and shown in bold letters, as it ranks as a leadership principle and serves as a model of completeness that we at Outdoor Odyssey encourage ALL aspiring leaders to embrace.\n\n

    </string>
</resources>