<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="layout.mepsFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mepsInstructions"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <RelativeLayout
            android:layout_width="339dp"
            android:layout_height="match_parent"
            android:paddingTop="3dp">

            <TextView
                android:id="@+id/mText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/mepsM"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <EditText
                android:id="@+id/mEdit"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/mText"
                android:layout_alignBottom="@+id/mText"
                android:layout_marginStart="18dp"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/eText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/mEdit"
                android:paddingTop="10dp"
                android:text="@string/mepsE"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <EditText
                android:id="@+id/eEdit"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_alignBaseline="@+id/eText"
                android:layout_alignBottom="@+id/eText"
                android:layout_toEndOf="@+id/eText" />

            <TextView
                android:id="@+id/pText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/eEdit"
                android:paddingTop="10dp"
                android:text="@string/mepsP"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <EditText
                android:id="@+id/pEdit"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_alignBaseline="@+id/pText"
                android:layout_alignBottom="@+id/pText"
                android:layout_toEndOf="@+id/pText" />

            <TextView
                android:id="@+id/sText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/pEdit"
                android:paddingTop="10dp"
                android:text="@string/mepsS"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <EditText
                android:id="@+id/sEdit"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_alignBaseline="@+id/sText"
                android:layout_alignBottom="@+id/sText"
                android:layout_toEndOf="@+id/sText" />

            <Button
                android:id="@+id/button2"
                style="@style/newButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_toEndOf="@+id/sEdit"
                android:elevation="5dp"
                android:text="Log MEPS Run" />


        </RelativeLayout>
    </LinearLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".25"
        app:srcCompat="@drawable/meps"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="65dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </RelativeLayout>
</LinearLayout>
